finished quotes machine

--- a/Zipline-02/index.html
+++ b/Zipline-02/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
   <meta charset="UTF-8">
   <title>Zipline: Build a Random Quote Machine</title> 
   <link rel="stylesheet" href="css/normalize.css">
@@ -15,9 +15,11 @@
     <h1 class="text-center">Quote Machine</h1>
     <div class="text-center">
       <button id="get-quotes" class="btn btn-primary btn-lg">Get Quote</button>
+
+      <a class="btn btn-primary btn-lg twitter-share-button popup" href="https://twitter.com/intent/tweet"><i class="fa fa-twitter"></i> Tweet</a>
     </div>
     <div id="quote"></div>
-
+    
   </main>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.sticky/1.0.1/jquery.sticky.min.js'></script>
