added progress-bar background and sounds. Complete project.

--- a/Zipline-04/index.html
+++ b/Zipline-04/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<audio src="http://dev.lawlietblack.com/media/sweet.wav" id="alarm"></audio>
 <main>
   <div class="container-fluid">
     <div class="text-center" id="options">
