finished search and sort functionality

--- a/Zipline-05/index.html
+++ b/Zipline-05/index.html
@@ -10,7 +10,11 @@
 <body>
 <main>
   <div class="container-fluid">
-    <h1 class="text-center">Streams</h1>
+    <h1 class="text-center">Twitch Streams</h1>
+    <button class="sort text-center" id="all">All</button>
+    <button class="sort" id="online">Online</button>
+    <button class="sort" id="offline">Offline</button>
+    <input type="text" id="search" placeholder="Search Channels">
     <div id="twitch-streams">
     </div>
   </div>
