Finised Zipline 9: Tic Tac Toe app.

--- a/Zipline-09/index.html
+++ b/Zipline-09/index.html
@@ -2,21 +2,22 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Zipline: Build a JavaScript Calculator</title> 
+  <title>Zipline: Build a Tic Tac Toe Game</title> 
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<main class="container-fluid">
-
-
+<main ng-app="TicTacToeApp">
+  <div class="text-center">
+    <h1>Tic Tac Toe</h1>
+  </div>
+  <tic-tac-toe></tic-tac-toe>
 </main>
   <script src='js/jquery/jquery.min.js'></script>
   <script src='js/jquery/jquery-ui.min.js'></script>
   <script src="js/angularjs/angular.min.js"></script>
-  <script src="js/mathjs/math.min.js"></script>
   <script src="js/app.js"></script> 
 </body>
 </html>
