deleted bonfires, moved to algorithms repo. Fixed weather app and quotes app, updated single page portfolio, and updated readme

--- a/Zipline-03/index.html
+++ b/Zipline-03/index.html
@@ -9,14 +9,12 @@
 </head>
 <body>
 <main>
-  <div class="container">
-    <h1 class="text-center">Local Weather App</h1>
+  <div class="container-fluid">
+    <h1 class="text-center title">Local Weather App</h1>
     <h1 class="text-center" id="location"></h1>
     <h2 class="text-center"><span id="weather-icons"></span> <span id="temp"></span></h2>
     <div class="text-center"><button class="btn btn-info" id="change-temp">Switch to &#8457;</i></button></div>
-  </div>
-  <div class="container">
-    <h2 class="text-center">Get Weather by Zip Code</h2>
+    <h2 class="text-center top-spacing">Get Weather by Zip Code</h2>
     <div class="form-group text-center">
       <label for="zip">Zip Code:</label>
       <input type="text" class="form-control" id="zip">
